# gutils-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: semgrep.yml
gutils/: __init__.py  creds.py
gutils/creds/: __init__.py
gutils/creds/google/oauth/: __init__.py  client_secret.py  credentials.py
gutils/creds/google/service_account/: __init__.py  credentials.py  service_secret.py
gutils/services/: api_client.py  enums.py  services.json
gutils/services/drive/: __init__.py  drive.py  helpers.py  query.py
gutils/services/drive/v3/: __init__.py  drive.py  helpers.py  query.py
gutils/services/drive/v3/drive/: __init__.py
gutils/services/sheets/: __init__.py  enums.py  sheets.py  types.py
gutils/services/sheets/v4/: types.py
gutils/services/sheets/v4/objects/: cells.py  charts.py  developer_metadata.py  general.py  others.py  pivot_tables.py  sheets.py  spreadsheets.py
gutils/services/sheets/v4/spreadsheets/: __init__.py  developer_metadata.py  sheets.py  values.py
gutils/services/spreadsheets/: types.py
gutils/services/spreadsheets/v4/: __init__.py  spreadsheets.py  types.py
gutils/services/spreadsheets/v4/objects/: cells.py  developer_metadata.py  others.py  sheets.py  spreadsheets.py
