[tool.poetry]
name = "gutils-python"
version = "0.0.1"
description = "G-Utils abstracts and presents typed interaction with workspace resource based APIs."
authors = ["Naveen S <dev@navs.page>"]
packages = [
    { include = "gutils" },
]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.51.0"
google-auth-oauthlib = "^0.5.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
